--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ nav {
 
     .value-proposition {
         width: 100%;
+        margin-top: 60px;
         margin: 20px;
         padding: 15px;
         font-size: 30px;
