--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ nav {
 
     .value-proposition {
         width: 100%;
-        margin: 3000px;
+        margin-top: 50px;
 
         padding: 10px;
         font-size: 30px;
