--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ nav {
     .value-proposition {
         width: 100%;
         margin: 30px;
-        padding: 20px;
+        padding-top: 50px;
         font-weight: bold;
         font-size: 35px;
         text-align: center;
