--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 100px; 
     }
 
     .value-proposition {
@@ -299,6 +300,7 @@ nav {
 @media (max-width: 475px) {
     .hero {
         margin: 20px;
+        margin-top: 120px; /* Further adjusted to add more space below the nav bar */
     }
 
     .value-proposition {
